vlib/v/checker/tests/hex_literal_overflow.out
vlib/v/checker/tests/hex_literal_overflow.vv:1:7: error: hex character literal overflows string
    1 | a := '\x11ffff'
      |       ~~~~~~~~
    2 | b := '\x20ffff'
    3 | c := '\x10fffff'
vlib/v/checker/tests/hex_literal_overflow.vv:2:7: error: hex character literal overflows string
    1 | a := '\x11ffff'
    2 | b := '\x20ffff'
      |       ~~~~~~~~
    3 | c := '\x10fffff'
    4 | println(a)
vlib/v/checker/tests/hex_literal_overflow.vv:3:7: error: hex character literal overflows string
    1 | a := '\x11ffff'
    2 | b := '\x20ffff'
    3 | c := '\x10fffff'
      |       ~~~~~~~~~
    4 | println(a)
    5 | println(b)
