vlib/v/checker/tests/hex_literal_overflow.vv
a := '\x11ffff'
b := '\x20ffff'
c := '\x10fffff'
println(a)
println(b)
println(c)
